Modified quiz, html minor additions

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         <span id="number">1</span>
                     </div>
                     <div class="quiz_steps">
-                        <div class="quiz_variants quiz_variants-active">
+                        <fieldset class="quiz_variants quiz_variants-active">
                             <div class="variants_item">
                                 <label for="_1-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -595,8 +595,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_2-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -639,8 +639,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_3-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -683,8 +683,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_4-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -727,8 +727,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_5-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -771,8 +771,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_6-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -815,8 +815,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants">
+                        </fieldset>
+                        <fieldset class="quiz_variants">
                             <div class="variants_item">
                                 <label for="_7-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -859,8 +859,8 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
-                        <div class="quiz_variants quiz_variants__last-page">
+                        </fieldset>
+                        <fieldset class="quiz_variants quiz_variants__last-page">
                             <div class="variants_item">
                                 <label for="_8-1">
                                     <img src="img/quiz_var.png" alt="">
@@ -903,7 +903,7 @@
                                 </label>
                                 <span>Вариант 3</span>
                             </div>
-                        </div>
+                        </fieldset>
                     </div>
                     <div class="quiz_buttons">
                         <button class="button button-quiz button-prev" disabled>
